# arc-near-contracts

./: .gitignore  Cargo.toml  license.md  package.json  readme.md  run-build.sh  run-test.sh
app-core/: Cargo.toml  build.sh
app-market/: Cargo.toml  build.sh  readme.md
app-market/src/: sale_views.rs
arc-actor/: Cargo.toml  build.sh
arc-actor/src/: lib.rs
arc-app/: Cargo.toml  build.sh
arc-app/src/: lib.rs
arc-assets/: Cargo.toml  build.sh  readme.md
arc-assets/src/: actor.rs  events.rs  guild.rs  intern.rs  lib.rs  royalty.rs  token.rs
arc-core/: readme.md
arc-core/src/: lib.rs
arc-guild/: Cargo.toml  build.sh
arc-guild/src/: lib.rs
arc-market/: Cargo.toml  build.sh
arc-market/src/: lib.rs  sale.rs
arc-shared/: Cargo.toml  readme.md
arc-shared/src/: actor.rs  guild.rs  intern.rs  lib.rs  meta.rs  royalty.rs  token.rs
arc-standard/: readme.md
arc-standard/src/: actor.rs  approval.rs  events.rs  guild.rs  intern.rs  lib.rs  meta.rs  royalty.rs  token.rs  utils.rs
arc-standard/src/actor/: api.rs  data.rs  mod.rs
arc-standard/src/event/: json.rs
guild-core/: Cargo.toml
guild-core/src/: lib.rs
guild-standard/: Cargo.toml
guild-standard/src/: lib.rs  utils.rs
market-contract/src/: external.rs
nft-contract/src/: actordata.rs  approval.rs  internal.rs  lib.rs  metadata.rs  mint.rs  nft_core.rs
old-standard/arc-actors/: Cargo.toml
old-standard/arc-guilds/: Cargo.toml
original-guild/: readme.md  run-build.sh  run-test.sh
original-guild/guild-core/: build.sh
standard/: Cargo.toml
standard/src/: lib.rs
(+58 files in other folders)
