[package]
name = "arc-market"
version = "0.1.0"
authors = ["vecno.io <info@vecno.io>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/vecno-io/arc-near-contracts"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
arc-standard = { path = "../arc-standard" }
near-sdk = "=4.0.0-pre.7"
serde_json = "1.0"
