[package]
name = "guild-core"
version = "0.1.0"
authors = ["vecno.io <info@vecno.io>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/koen-vr/guilded-memberships"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
guild-standard = { path = "../guild-standard" }
near-sdk = "=4.0.0-pre.7"
serde_json = "1.0"
